# evalaite

./: .gitignore  README.md  evalaite.db  pyproject.toml  render.yaml  requirements.txt
app/: main.py  models.py  services.py
frontend/static/css/: style.css
frontend/templates/: admin.html  base.html  exam.html  history.html  index.html  login.html  results.html
